# dawnpy-serial

./: README.md  pyproject.toml  tox.ini
.github/workflows/: master.yml
src/dawnpy_serial/: __init__.py  __main__.py  client.py  decoder.py  serial.py
src/dawnpy_serial/commands/: __init__.py  cmd_serial.py
tests/: conftest.py  test_cmd_serial.py  test_serial_client.py  test_serial_client_list.py  test_serial_decoder.py  test_serial_protocol.py
