[build-system]
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dawnpy-serial"
version = "0.1.0"
description = "Serial transport package for Dawn built on top of dawnpy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dawnpy",
  "click>=8.1",
  "pyserial>=3.5",
]

[project.urls]
Repository = "https://github.com/railab/dawnpy-serial"
Documentation = "https://railab.github.io/dawn/tools/dawnpy-serial.html"
"Dawn Project" = "https://github.com/railab/dawn"

[project.scripts]
dawnpy-serial = "dawnpy_serial.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dawnpy_serial*"]

[tool.setuptools.package-data]
dawnpy_serial = ["py.typed"]

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 79
